# Izometrical_Project

./: .clangd  CMakeCache.txt  CMakeList.txt  CMakeLists.txt  Constants.hpp  Enemy.hpp  EntityManager.hpp  IsoMath.hpp  Player.hpp  README.md  main.cpp  tree.txt
Talk/: Assistent_A.md  Assistent_B.md
assets/Enemies/vermin_heavy/: enemy.cfg
assets/Enemies/vermin_soldier/: .txt
assets/Vehicles/motorcycle/: vehicle.cfg
assets/Vehicles/steamcar/: vehicle.cfg
assets/audio/: AUDIO_MAP.md
assets/enemies/target_dummy/: enemy.cfg
assets/enemies/vermin_soldier/: enemy.cfg
assets/vehicles/airplane/: vehicle.cfg
include/: BulletSystem.hpp  HUD.hpp  HostileAISystem.hpp  InputManager.hpp  Inventory.hpp  Progression.hpp  RecipeDatabase.hpp  ResourceManager.hpp  SaveSystem.hpp  Tactics.hpp  TextureGenerator.hpp  TimeShift.hpp  TitanAI.hpp  VehicleManager.hpp  WeatherSystem.hpp  WorkstationDatabase.hpp  WorkstationManager.hpp  WorkstationTypes.hpp  WorkstationUIState.hpp  Workstations.hpp  WorldSession.hpp  WorldWorkstation.hpp
include/Enemies/punching_bag/: enemy.cfg
include/Enemies/static_base/: enemy.cfg
include/Enemies/target_dummy/: enemy.cfg
include/Enemies/vermin_heavy/: enemy.cfg
include/Enemies/vermin_soldier/: enemy.cfg
include/Vehicles/helicopter/: vehicle.cfg
include/ai/: BossAISystem.hpp  EnemyArchetypeRegistry.hpp  EnemySpawner.hpp  HostileAISystem.hpp  PerceptionSystem.hpp  Tactics.hpp  TitanAI.hpp
include/content/: AssetPaths.hpp  TextureGenerator.hpp  Workstations.hpp
include/core/: Constants.hpp  IsoMath.hpp  Types.hpp
include/engine/: AudioController.hpp  GameApplication.hpp  InputManager.hpp  ProceduralSoundEffects.hpp  TimeShift.hpp
include/entities/: Camera.hpp  Collisions.hpp  PlayerController.hpp
include/gameplay/: AdvancedMechanics.hpp  AdvancedPilotMovement.hpp  BulletSystem.hpp  DamageSystem.hpp  GameState.hpp  SpatialGrid.hpp  StatefulActionsController.hpp  Tactics.hpp
include/persistence/: ActiveBuffsController.hpp  CharacterManager.hpp  Inventory.hpp  ModularEquipmentSystem.hpp  Progression.hpp  SaveSystem.hpp  StoryFlagRegistry.hpp
include/render/: GameRenderer.hpp
include/ui/: HUD.hpp  PipPad.hpp  PipPadUI.hpp  WorkstationUI.hpp
include/vehicles/: ThermalLoadSystem.hpp  VehicleManager.hpp  VehicleSeatController.hpp
include/world/: CampPlacementValidator.hpp  DestructibleEnvironment.hpp  MapScreen.hpp  StoryEventManager.hpp  WeatherSystem.hpp  WorldSession.hpp
manuals/: ASSET_PATH_NORMALIZATION.md  BATCH_1_CORE_CLEANUP_LOG.md  BATCH_2_FOLDER_RESTRUCTURING_LOG.md  BUG_RISK_REGISTER.md  Data_Tree.md  FILE_BY_FILE_MIGRATION_PLAN.md  INTEGRATION_PHASES.md  Izometrical Project - Master Execution Plan.md  MASTER_MIGRATION_PLAN.md  MECHANICS_TRANSFER_MATRIX.md  MERGE_EXECUTION_CHECKLIST.md  MERGE_MASTER_PLAN.md  REPOSITORY_AUDIT_CHECKLIST.md  SAVE_COMPATIBILITY_PLAN.md  SYSTEM_OWNERSHIP_MAP.md  TARGET_ARCHITECTURE.md
src/: RecipeDatabase.cpp  ResourceManager.cpp  WorkstationDatabase.cpp  WorkstationManager.cpp  Workstations.cpp  WorldWorkstation.cpp  main.cpp
src/ai/: BossAISystem.cpp  EnemyArchetypeRegistry.cpp  EnemySpawner.cpp  HostileAISystem.cpp  PerceptionSystem.cpp  TitanAI.cpp
src/content/: Workstations.cpp
src/engine/: AudioController.cpp  GameApplication.cpp  InputManager.cpp  ProceduralSoundEffects.cpp  TimeShift.cpp  Untitled-1.txt
src/entities/: Camera.cpp  Collisions.cpp  PlayerController.cpp
src/gameplay/: AdvancedMechanics.cpp  AdvancedPilotMovement.cpp  BulletSystem.cpp  DamageSystem.cpp  SpatialGrid.cpp  StatefulActionsController.cpp  Tactics.cpp
src/persistence/: ActiveBuffsController.cpp  CharacterManager.cpp  Inventory.cpp  ModularEquipmentSystem.cpp  Progression.cpp  SaveSystem.cpp  StoryFlagRegistry.cpp
src/render/: GameRenderer.cpp
src/ui/: HUD.cpp  PipPadUI.cpp  TerminalUI.cpp  WorkstationUI.cpp
src/vehicles/: ThermalLoadSystem.cpp  VehicleManager.cpp  VehicleSeatController.cpp
src/world/: CampPlacementValidator.cpp  DestructibleEnvironment.cpp  MapScreen.cpp  StoryEventManager.cpp  WeatherSystem.cpp  WorldSession.cpp
